--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="utf-8" />
+    <title>테스트</title>
+    <!-- JavaScript & jQuery -->
+    <script src="js/jquery-3.3.1.min.js"></script>
+  </head>
+  <body>
+  </body>
+</html>
