--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <title>테스트</title>
     <!-- JavaScript & jQuery -->
-    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-3.4.2.min.js"></script>
   </head>
   <body>
+    <h1>Hello</h1>
   </body>
 </html>
