--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <title>테스트</title>
+    <title>Love My Self</title>
+    <meta name="description" content="">
+    <link rel="shortcut icon" type="image/x-icon" href="cherry.ico" />
     <!-- JavaScript & jQuery -->
     <script src="js/jquery-3.4.2.min.js"></script>
   </head>
