--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <title>Love My Self</title>
+    <meta name="author" content="이애린">
     <meta name="description" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    
+    <title>Love My Self</title>
+    
     <link rel="shortcut icon" type="image/x-icon" href="cherry.ico" />
     <!-- JavaScript & jQuery -->
     <script src="js/jquery-3.4.2.min.js"></script>
