--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<h1>Hello</h1>
     		<div id="wrap">
       			<section id="career">
-        			<div id="project">
+        			<article id="project">
 					<dl>
 					<dt>(주)앤드와이즈 프로젝트 2팀 개발자</dt>
 					<dd>- 2019. 04. 15 ~ 재직중</dd>
@@ -32,7 +32,18 @@
 					<dd>- 부천대학교 홍보사이트, 학과 및 부서기관 홈페이지 구축</dd>
 					<dd>- 광림교회 홈페이지 구축</dd>
 					</dl>
-				</div>
+				</article>
+				
+				<article id="skill">
+					<dl>
+					<dt>(주)앤드와이즈 프로젝트 2팀 개발자</dt>
+					<dd>- 2019. 04. 15 ~ 재직중</dd>
+					<dd>- 이화여자대학교 메인 홈페이지 구축</dd>
+					<dd>- 연세대학교 제중보건개발원 홈페이지 구축</dd>
+					<dd>- 부천대학교 홍보사이트, 학과 및 부서기관 홈페이지 구축</dd>
+					<dd>- 광림교회 홈페이지 구축</dd>
+					</dl>
+				</article>
 			</section>
 		</div>
   	</body>
