--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<h1>Hello</h1>
     		<div id="wrap">
       			<section id="career">
-        			<article id="project">
+        			<div id="project">
 					<dl>
 					<dt>(주)앤드와이즈 프로젝트 2팀 개발자</dt>
 					<dd>- 2019. 04. 15 ~ 재직중</dd>
@@ -32,9 +32,9 @@
 					<dd>- 부천대학교 홍보사이트, 학과 및 부서기관 홈페이지 구축</dd>
 					<dd>- 광림교회 홈페이지 구축</dd>
 					</dl>
-				</article>
+				</div>
 				
-				<article id="skill">
+				<div id="skill">
 					<dl>
 					<dt>(주)앤드와이즈 프로젝트 2팀 개발자</dt>
 					<dd>- 2019. 04. 15 ~ 재직중</dd>
@@ -43,7 +43,7 @@
 					<dd>- 부천대학교 홍보사이트, 학과 및 부서기관 홈페이지 구축</dd>
 					<dd>- 광림교회 홈페이지 구축</dd>
 					</dl>
-				</article>
+				</div>
 			</section>
 		</div>
   	</body>
