--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
 		<link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&amp;display=swap" rel="stylesheet"/>
 		<!-- JavaScript & jQuery -->
 		<script src="js/jquery-3.4.2.min.js"></script>
+		<!-- CSS -->
+   		<link rel="stylesheet" type="text/css" href="css/style.css" />
 	</head>
   
 	<body>
 		<h1>Hello</h1>
     		<div id="wrap">
       			<section id="career">
-        			<div id="project">
+        			<div class="project">
 					<dl>
 					<dt>(주)앤드와이즈 프로젝트 2팀 개발자</dt>
 					<dd>- 2019. 04. 15 ~ 재직중</dd>
@@ -34,7 +36,7 @@
 					</dl>
 				</div>
 				
-				<div id="skill">
+				<div class="skill">
 					<dl>
 					<dt>(주)앤드와이즈 프로젝트 2팀 개발자</dt>
 					<dd>- 2019. 04. 15 ~ 재직중</dd>
