--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 	<body>
 		<h1>Hello</h1>
     		<div id="wrap">
-      			<section id="career">
-        			<div class="project">
+      			<section id="myself">
+        			<div class="career">
+					<h2><img src="g" alt="" />Career</h2>
 					<dl>
 					<dt>(주)앤드와이즈 프로젝트 2팀 개발자</dt>
 					<dd>- 2019. 04. 15 ~ 재직중</dd>
@@ -37,6 +38,7 @@
 				</div>
 				
 				<div class="skill">
+					<h2><img src="" alt="" />Skill</h2>
 					<dl>
 					<dt>(주)앤드와이즈 프로젝트 2팀 개발자</dt>
 					<dd>- 2019. 04. 15 ~ 재직중</dd>
