--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     		<div id="wrap">
       			<section id="myself">
         			<div class="career">
-					<h2><img src="g" alt="" /><strong>Career</strong></h2>
+					<h2><img src="image/data.png" alt="" /><strong>Career</strong></h2>
 					<dl>
 					<dt>(주)앤드와이즈 프로젝트 2팀 개발자</dt>
 					<dd>- 2019. 04. 15 ~ 재직중</dd>
@@ -38,7 +38,7 @@
 				</div>
 				
 				<div class="skill">
-					<h2><img src="" alt="" /><strong>Skill</strong></h2>
+					<h2><img src="image/requirements.png" alt="" /><strong>Skill</strong></h2>
 					<dl>
 					<dt>(주)앤드와이즈 프로젝트 2팀 개발자</dt>
 					<dd>- 2019. 04. 15 ~ 재직중</dd>
